# DL_Perceptron_pkg

./: pyproject.toml  setup.py
.github/workflows/: python-publish.yml
